<resources>
    <string name="app_name">AMAT Tool</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="address">Address</string>
    <string name="title_activity_new_tool">AMAT Tool Viewer</string>
    <string name="title_activity_tools_view">ToolsView</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="chk_CHA">Include CHA</string>
    <string name="chk_CHB">Include CHB</string>
    <string name="chk_CHC">Include CHC</string>
    <string name="chk_CHD">Include CHD</string>
    <string name="chk_LLA">Include LLA</string>
    <string name="chk_LLB">Include LLB</string>
    <string name="chk_Buffer">Include Buffer</string>
    <string name="str_query_info">Query Tool Attribute</string>
</resources>
